the moment pending further testing, but you can enable it manually by
defining ESCREEN.
----------------------------------------------------------------------
Sat May  4 11:12:19 2002                        Michael Jennings (mej)

Added a --enable-escreen option for those who wish to try it out.
Also fixed the compile with Escreen and profiling are both enabled,
and disabled Escreen debugging.
----------------------------------------------------------------------
Tue May  7 10:16:56 2002                        Michael Jennings (mej)

configure.in and configure.ac should no longer differ, so let's not
maintain both.
----------------------------------------------------------------------
Mon May 13 18:46:06 2002                        Michael Jennings (mej)

Latest Escreen patch from Azundris <hacks@azundris.com>.
----------------------------------------------------------------------
Mon May 13 19:18:46 2002                        Michael Jennings (mej)

Fixed indentation.
----------------------------------------------------------------------
Mon May 13 23:58:16 2002                        Michael Jennings (mej)

Fixed a bad paste.
----------------------------------------------------------------------
Fri May 17 11:55:52 2002                        Michael Jennings (mej)

If $SCREENRC is defined, use it.
----------------------------------------------------------------------
Wed May 22 09:16:55 2002                        Michael Jennings (mej)

Touch-ups to help info.
----------------------------------------------------------------------
Wed May 22 11:37:19 2002                        Michael Jennings (mej)

Latest Escreen work from Azundris <scream@azundris.com>.
----------------------------------------------------------------------
Wed May 22 16:17:24 2002                        Michael Jennings (mej)

Fixed duplicate freeing of menu background pixmap.
----------------------------------------------------------------------